src/components/EventCard/EventCard.sass
@import '../../../styles/variables.sass'


    
.event-card

    width: min(85vw, 400px)
    border: 6px solid white

    height: 300px
    padding: 20px
    border-radius: 20px
    // crop anything beyond the bottom
    overflow: hidden
    h1 
        color: white
        font-family: $headerFont
        font-size: 2em
        margin: 0px
    p 
        color: white
        margin: 0px
        font-size: 1em
    [astro-icon]
        display: inline
        position: relative
        bottom: 10%
        left: 50%
        width: 300px
        height: 300px
        opacity: 0.2
    [astro-icon="emojione-monotone:ping-pong"]
        left: 50%
        bottom: 10%
        width: 250px
        height: 250px
    p.date
        font-family: $headerFont
        margin-bottom: 20px
        text-align: justify
        font-size: 1.2em
        strong
            font-family: $headerFont
    path 
        color: white 
        fill: white

